--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@drawable/bg_snap_anonym"
+    tools:context=".presentation.activity.MainActivity"
+    android:fitsSystemWindows="true" >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textView_app_title"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_margin="@dimen/default_margin"
+        app:fontFamily="@font/alissya"
+        android:gravity="center"
+        android:text="@string/app_title"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@android:color/white"
+        android:textSize="70sp"
+        android:layout_alignParentTop="true" />
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/margin_24" >
+
+        <Button
+            android:id="@+id/imageButton_explore_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_16"
+            android:background="@drawable/button_background"
+            android:contentDescription="@string/explore_snaps"
+            android:padding="@dimen/default_margin"
+            android:text="@string/explore_button_label"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:layout_alignParentBottom="true"
+            app:fontFamily="@font/rocko"
+            android:onClick="onExploreSnaps"/>
+
+        <Button
+            android:id="@+id/imageButton_publish_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_16"
+            android:background="@drawable/button_background"
+            android:contentDescription="@string/publish_a_snap"
+            android:padding="@dimen/default_margin"
+            android:text="@string/publish_button_label"
+            app:fontFamily="@font/rocko"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:onClick="onPublishSnap"/>
+
+    </LinearLayout>
+
+
+
+
+</RelativeLayout>
