--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,7 +27,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/margin_24" >
+        android:layout_marginBottom="@dimen/margin_24" >
 
         <Button
             android:id="@+id/imageButton_explore_main"
@@ -40,7 +41,6 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
             android:textColor="@android:color/white"
             android:textSize="30sp"
-            android:layout_alignParentBottom="true"
             app:fontFamily="@font/rocko"
             android:onClick="onExploreSnaps"/>
 
@@ -56,7 +56,9 @@
             app:fontFamily="@font/rocko"
             android:textColor="@android:color/white"
             android:textSize="30sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch"
             android:onClick="onPublishSnap"/>
+
 
     </LinearLayout>
 
