--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,5 @@
     <dimen name="margin_24">24dp</dimen>
     <dimen name="margin_16">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="app_default_padding">padding_10</dimen>
+    <dimen name="padding_10">10dp</dimen>
 </resources>
